static/css/clean-blog.css
/* ... */
.navbar > .container, .navbar > .container-fluid {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    -ms-flex-align: center;
    align-items: center;
}

@media only screen and (max-width: 991px) {
  .navbar > .container, .navbar > .container-fluid {
      -ms-flex-pack: justify;
      justify-content: center;
  }
}

@media only screen and (min-width: 992px) {
  div .copyright {
    padding: 0;
    margin-left: 96px;
  }
}

.input-text__hide-pwd button:hover {
  background-color: transparent;
  color: #212529;
  border-color: transparent;
}

.form-login .input-text__label span {
  font-size: 0.7rem;
}

.form-login .input-text__input:focus + .input-text__label span, .form-login .input-text__input:not(.is--empty) + .input-text__label span {
  font-size: 0.79rem;
}

#main-content, .container-fluid {
  margin-top: 150px;
}

.pwd-security {
  font-family: 'Open Sans', 'Arial', sans-serif;
}

.pf_title-page {
  line-height: 75px;
}

.copy-address {
  height: 150px;
}

.loggedout .container-fluid {
  margin-top: 0;
}

